[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/actors/fludd_display/fludd_display.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/delfino.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://scenes/actors/fludd_display/ui/interior_water.png" type="Texture" id=3]
[ext_resource path="res://scenes/actors/fludd_display/ui/border.png" type="Texture" id=4]
[ext_resource path="res://scenes/actors/fludd_display/ui/border_progress.png" type="Texture" id=5]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float water_height : hint_range(0.0f, 1.0f);

void fragment() {
	if (texture(TEXTURE, UV) == vec4(1, 1, 1, 1)) {
		float sine_height = (sin((UV.x * 7.5f) + TIME * 8.5f) / 60.5f) + ((water_height * 1.3f) / 1.25f);
		if (UV.y > sine_height) {
			COLOR = vec4(1, 1, 1, 1)
		} else {
			COLOR = vec4(1, 1, 1, 0);
		}
	} else {
		COLOR = vec4(1, 1, 1, 0)
	}
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/water_height = 0.396

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 1 )
shader_param/water_height = 0.396

[sub_resource type="DynamicFont" id=4]
size = 48
outline_color = Color( 0, 0, 0, 0.25098 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 48
font_data = ExtResource( 2 )

[node name="FluddDisplay" type="Node2D"]
pause_mode = 2
script = ExtResource( 1 )
material_0 = SubResource( 2 )
material_1 = SubResource( 3 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = 25

[node name="FluddUI" type="TextureProgress" parent="CanvasLayer"]
margin_left = 622.0
margin_top = -60.0
margin_right = 822.0
margin_bottom = 139.0
rect_scale = Vector2( 0.3, 0.3 )
value = 100.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
fill_mode = 5
tint_under = Color( 0.333333, 0, 0, 1 )
tint_progress = Color( 1, 0.352941, 0.352941, 1 )

[node name="Shadow" type="TextureProgress" parent="CanvasLayer/FluddUI"]
modulate = Color( 0, 0, 0, 0.25098 )
show_behind_parent = true
margin_left = 6.0
margin_top = 6.0
margin_right = 262.0
margin_bottom = 274.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 4 )
fill_mode = 5
tint_under = Color( 0.188235, 0.129412, 0.129412, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelShadow" type="Label" parent="CanvasLayer/FluddUI"]
margin_left = 46.0
margin_top = 78.0
margin_right = 169.0
margin_bottom = 133.0
custom_colors/font_color = Color( 0, 0, 0, 0.25098 )
custom_fonts/font = SubResource( 4 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CanvasLayer/FluddUI"]
margin_left = 40.0
margin_top = 72.0
margin_right = 163.0
margin_bottom = 127.0
custom_fonts/font = SubResource( 5 )
text = "100%"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterShadow" type="TextureRect" parent="CanvasLayer/FluddUI"]
modulate = Color( 0, 0, 0, 0.25098 )
show_behind_parent = true
material = SubResource( 2 )
margin_left = 46.0
margin_top = 46.0
margin_right = 164.0
margin_bottom = 164.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WaterTexture" type="TextureRect" parent="CanvasLayer/FluddUI"]
modulate = Color( 0.341176, 0.282353, 1, 1 )
show_behind_parent = true
material = SubResource( 2 )
margin_left = 40.0
margin_top = 40.0
margin_right = 158.0
margin_bottom = 158.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="CanvasLayer/FluddUI"]
